# kbdsrv

./: Cargo.toml  README.md  rustfmt.toml
data/: kbd.html  kbd.js
src/: main.rs
