[package]
name = "kbdsrv"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.8", features = ["ws"] }
clap = { version = "4", default-features = false, features = ["derive", "help", "std", "usage"] }
tokio = { version = "1", features = ["rt", "macros", "net", "fs"] }
evdev = { version = "0.13", default-features = false, features = ["tokio"] }
